k3s/manifests/elasticsearch/networking/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`elasticsearch.jedric.local`)
    kind: Rule
    services:
    - name: elasticsearch-es-http
      port: 9200
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kibana.jedric.local`)
    kind: Rule
    services:
    - name: kibana-kb-http
      port: 5601
